# rust-swc-test

./: Cargo.toml  README.md
src/: main.rs
